@@ -67,3 +67,4 @@
             Added author email address
             First draft check_password (issue #15)
             Added output for already drafted cases (issue #15)
+            Added search for character sequence (issue #15)
